# cruxlines

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/javascript/: index.js
fixtures/python/: models.py  utils.py
fixtures/rust/: main.rs  models.rs  utils.rs
src/: analysis.rs  cache.rs  cli_io.rs  find_references.rs  format_router.rs  graph.rs  intern.rs  io.rs  lib.rs  main.rs  scoring.rs  timing.rs
src/languages/: mod.rs
src/languages/c/: mod.rs
src/languages/c/fixtures/: main.c  types.h
src/languages/cpp/: mod.rs
src/languages/cpp/fixtures/: main.cpp  types.hpp
src/languages/csharp/: mod.rs
src/languages/csharp/fixtures/: Models.cs  Program.cs  Services.cs
src/languages/go/: mod.rs
src/languages/go/fixtures/: main.go  models.go  utils.go
src/languages/java/: mod.rs
src/languages/java/fixtures/: InteropCall.java  JavaUser.java  Main.java  Models.java
src/languages/javascript/: mod.rs
src/languages/javascript/fixtures/: components.tsx  index.ts  index.tsx  models.js  utils.js
src/languages/kotlin/: mod.rs
src/languages/kotlin/fixtures/: interop.kt  main.kt  models.kt
src/languages/php/: mod.rs
src/languages/php/fixtures/: Models.php  Services.php  index.php
src/languages/python/: mod.rs
src/languages/python/fixtures/: main.py
src/languages/rust/: mod.rs
tests/: cli.rs  find_references.rs
