[package]
name = "cruxlines"
version = "0.2.0"
edition = "2024"
description = "Ranks symbol definitions by cross-file references using tree-sitter."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kantord/cruxlines"
authors = ["Daniel Kantor <git@daniel-kantor.com>"]
keywords = ["code-analysis", "graph", "pagerank", "tree-sitter", "references"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
petgraph = "0.8.3"
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-java = "0.23.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
ignore = "0.4.23"
frecenfile = "0.4.1"
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.2"
